--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,13 @@ body {
 .App {
   font-family: sans-serif;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+@media screen and (min-width: 780px) {
+  .App {
+    flex-direction: row;
+  }
 }
 
 /* door styles */
@@ -26,7 +33,6 @@ body {
   height: 100%;
   width: 100%;
   backface-visibility: hidden;
-
   display: flex;
   align-items: center;
   justify-content: center;
@@ -36,6 +42,8 @@ body {
   background-color: #2e313d;
   opacity: 0.8;
   transform: rotateY(180deg);
+  border: 1px solid #2e313d;
+  border-radius: 4px;
 }
 
 .doorItem:hover .door {
@@ -44,4 +52,8 @@ body {
 
 .door.opened {
   transform: rotateY(180deg);
+}
+
+img#modal-modal-description {
+  max-width: 100%;
 }
